[package]
name = "verust"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cmake = "0.1.31"

[dependencies]
bytes = "1.5.0"
futures = "0.3"
mio = { version = "0.8.9", optional = true, default-features = false }
tokio = { version = "1", features = ["full"] }  # For testing, remove afterwards
